# Maze

./: CMakeLists.txt
src/: main.cpp
src/components/: Component.h  SpriteComponent.h  TransformComponent.h
src/core/: Game.cpp  Game.h
src/entities/: GameObject.cpp  GameObject.h
src/systems/: RenderSystem.cpp  RenderSystem.h
